Adjusted Connection to the DB

--- a/TDM_OnLineStore_Angular.Web/config.json
+++ b/TDM_OnLineStore_Angular.Web/config.json
@@ -3,7 +3,7 @@
   //"Key" :  "Value",
 
   "ConnectionStrings": {
-    "TDM_OnLineStoreDB": "server=localhost;uid=root;pwd=Password;database=TDM_OnLineStoreDB"
+    "TDM_OnLineStoreDB": "server=localhost;uid=root;pwd=admin;database=TDM_OnLineStore_DB"
   }
 }
 
