--- a/TDM_OnLineStore_Angular.Web/TDM_OnLineStore_Angular.Web.csproj
+++ b/TDM_OnLineStore_Angular.Web/TDM_OnLineStore_Angular.Web.csproj
@@ -46,6 +46,10 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ClientApp\src\app\user\createAccount\" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
